0.9.1.0a/README.md
# IzzFLOAT
My personal changes to the VESC Float Package

Version 0.9.1.0a

-MODIFIED WITH NO ACCELERATION LIMIT/ NO TRACTION CONTROL. This is for testing high power motors like the superflux.

-Adds surge behavior with differential pitch trigger

Version 0.9.0.1

-Adds sticky tilt input with hardcoded value of 3.0


<H2>Readme from FLOAT</H2>
Based on Mitch Lustig's original Balance Package, but specifically tailored for one wheeled skateboards, as invented by Ben Smither in 2007: http://www.robosys.co.uk/

Removes unneeded parameters, adds new features and behaviors, and has a more user-friendly configuration menu with usable default/min/max values and informative Help text.

<H3><font color=yellow>NEW USERS: DO NOT LOAD UNTIL YOU'VE CONFIGURED MOTOR AND IMU!!!</font></H3>

<H2>DISCLAIMER</H2>

This package is not endorsed by the vesc-project. Use at your own risk.

<H2>CREDITS</H2>

Ported by Nico Aleman, heavily based on SurfDado's ATR Firmware: https://pev.dev/t/atr-firmware-101/43

Nico Aleman - <NicoAleman1@hotmail.com>

<H2>RELEASE NOTES</H2>

Release Changelogs: https://pev.dev/t/float-package-changelogs/499

#### &nbsp;
#### Build Info
